feat: outgoing hugs slots
